# Coding-theory

./: CMakeLists.txt  PHASE3_COMPLETE.md  PHASE3_STATUS.md  README.md  TODO.md  claude.md  codectk.pc.in  input.txt
backend/: bitio.h  codectk.h  gf2m.h  goppa.h
include/: bch.h  codectk.h  gf2.h  gf2m.h  hamming.h  huffman.h  poly.h
src/: bch.c  bitio.c  gf2.c  gf2m.c  goppa.c  hamming.c  huffman.c  poly.c  registry.c
tests/: test_bch.c  test_bitio.c  test_gf2.c  test_gf2m.c  test_hamming.c  test_huffman.c  test_main.c  test_poly.c
tools/: demo_hamming.c  pipe.c
